# SixDman

./: .gitattributes  .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-docs.txt  requirements.txt
data/: MAN157Nodes.mat
docs/: analysis.rst  band.rst  conf.py  contributing.rst  installation.rst  network.rst  planning.rst  quickstart.rst
examples/: MAN157_Singel_Level.ipynb  MAN157_Total_Level_50G.ipynb
results/50G_Complete/: MAN157_HL2_K_path_attributes.csv  MAN157_HL2_K_path_attributes_colocated.csv  MAN157_HL2_bvt_info.npz  MAN157_HL2_link_info.npz  MAN157_HL2_node_capacity_profile_array.npz  MAN157_HL2_path_GSNR_info.npz  MAN157_HL2_segments_latency.npz  MAN157_HL3_K_path_attributes.csv  MAN157_HL3_K_path_attributes_colocated.csv  MAN157_HL3_bvt_info.npz  MAN157_HL3_link_info.npz  MAN157_HL3_node_capacity_profile_array.npz  MAN157_HL3_path_GSNR_info.npz  MAN157_HL3_segments_latency.npz  MAN157_HL4_K_path_attributes.csv  MAN157_HL4_K_path_attributes_colocated.csv  MAN157_HL4_bvt_info.npz  MAN157_HL4_link_info.npz  MAN157_HL4_node_capacity_profile_array.npz  MAN157_HL4_path_GSNR_info.npz  MAN157_HL_capacity_final.npz  MAN157_process_GSNR_HL2.npz  MAN157_process_GSNR_HL3.npz  MAN157_process_GSNR_HL4.npz  MAN157_traffic_matrix.npz
results/single_level/: MAN157_HL4_bvt_info.npz  MAN157_HL4_link_info.npz  MAN157_HL4_node_capacity_profile_array.npz  MAN157_HL4_path_GSNR_info.npz  MAN157_HL4_segments_latency.npz  MAN157_HL_capacity_final.npz  (+1 more)
tests/: test_band.py  test_network.py  test_planning.py
(+35 files in other folders)
